--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -130,7 +130,7 @@
     </div>
     <div class="col-xl-4">
       <div class="card shadow">
-        <div class="card-header bg-transparent">
+        <div class="card-header">
           <div class="row align-items-center">
             <div class="col">
               <h6 class="text-uppercase text-muted ls-1 mb-1">Performance</h6>
